# do-it-claude

./: .gitignore  CLAUDE.md  README.md  index.html  package-lock.json  package.json
src/: App.vue  router.ts  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  context_generator.rs  db.rs  executor.rs  lib.rs  main.rs  mode_manager.rs  pty.rs
src/components/: AddProjectDialog.vue  AddTaskDialog.vue  BottomPanel.vue  IdeaChat.vue  KanbanColumn.vue  ProjectCard.vue  ProjectSettingsModal.vue  TaskCard.vue  TaskDetail.vue  TerminalPanel.vue
src/components/task-detail/: TaskChatPane.vue  TaskDefinitionPane.vue  TaskExecutionPane.vue  TaskMetadataPane.vue
src/composables/: useNotificationSettings.ts  useTheme.ts
src/services/: notifications.ts
src/stores/: chatStore.ts  projectStore.ts  taskStore.ts  templateStore.ts
src/types/: index.ts
src/utils/: dateFormat.ts
src/views/: Dashboard.vue  ProjectBoard.vue  Settings.vue
