[package]
name = "do-it-claude"
version = "0.2.0"
description = "A Kanban-style task manager that executes tasks via Claude Code CLI"
authors = ["you"]
edition = "2021"

[lib]
name = "do_it_claude_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-notification = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
uuid = { version = "1", features = ["v4"] }
tokio = { version = "1", features = ["process", "rt-multi-thread", "sync", "io-util"] }
chrono = { version = "0.4", features = ["serde"] }
portable-pty = "0.8"
